@@ -37,7 +37,6 @@
 		#include <avr/boot.h>
 		#include <avr/eeprom.h>
 		#include <stdbool.h>
-		#include <util/delay.h>
 	
 		#include "Descriptors.h"
 		
